# msutils

./: .gitignore  Makefile  README.md
core/: Cargo.toml
core/.cargo/: config.toml
core/src/: lib.rs
core/src/utilities/: calculate_baseline.rs  calculate_eic.rs  find_feature.rs  find_features.rs  find_noise_level.rs  find_peaks.rs  functions.rs  get_boundaries.rs  get_peak.rs  get_peaks_from_chrom.rs  get_peaks_from_eic.rs  mod.rs  scan_for_peaks.rs  structs.rs  utilities.rs
core/src/utilities/cheminfo/: air_pls.rs  kmeans.rs  lm.rs  mod.rs  noise_san_plot.rs  sgg.rs
core/tests/: air_pls.rs  find_noise_level_private.rs  find_peaks_private.rs  lm.rs  sgg.rs  test.json
core/tests/helpers/: mod.rs
wrappers/js/: binding.gyp  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  webpack.config.cjs
wrappers/js/native/macos-arm64/: libmsutils.dylib
wrappers/js/native/macos-x86_64/: libmsutils.dylib
wrappers/js/src/: bridge.cc  index-node.ts  index-wasm.ts  makeApi.ts
wrappers/js/src/types/: mzml.ts
wrappers/js/src/utilities/: calculateEic.ts  parseMzML.ts  platformLibPath.ts
wrappers/python/: __init__.py
wrappers/r/: DESCRIPTION  NAMESPACE  README.md
wrappers/r/R/: msut.R  msutils.R  zzz.R
wrappers/r/inst/libs/macos-arm64/: libmsut.dylib  libmsutils.dylib
wrappers/r/inst/libs/macos-x86_64/: libmsut.dylib  libmsutils.dylib
wrappers/r/src/: Makevars  bridge.c  init.c
